#pragma once

#include "MAC.hpp"

class Frame
{
private:
  MAC src_;
  MAC dst_;
  MAC 
public:
  // Ctor
};
