#pragma once

#include "Node.hpp"
#include <string>


class Switch : Node
{
private:
public:
};
